sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/authority_Reporting__c.object-meta.xml
<CustomObject>
    <description>Authority reportings associated with a location demolition</description>
    <label>Authority Reporting</label>
    <nameField>
        <displayFormat>AUTH-RP-{0000}</displayFormat>
        <label>Authority Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authority Reportings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>