sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/Chief_Statement__c.field-meta.xml
<CustomField>
    <fullName>Chief_Statement__c</fullName>
    <label>Chief Statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>