sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/County_Government_Statement__c.field-meta.xml
<CustomField>
    <fullName>County_Government_Statement__c</fullName>
    <label>County Government Statement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>