sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/Court_Case__c.field-meta.xml
<CustomField>
    <fullName>Court_Case__c</fullName>
    <label>Court Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>