sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/Location_Demolition__c.field-meta.xml
<CustomField>
    <fullName>Location_Demolition__c</fullName>
    <label>Location Demolition</label>
    <referenceTo>Location_Demolition__c</referenceTo>
    <relationshipName>Police_Reportings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>