sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/OB_Number__c.field-meta.xml
<CustomField>
    <fullName>OB_Number__c</fullName>
    <label>OB Number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>