sfSandBoxCode/force-app/main/default/objects/authority_Reporting__c/fields/Police_Abstract_Letter__c.field-meta.xml
<CustomField>
    <fullName>Police_Abstract_Letter__c</fullName>
    <label>Police Abstract Letter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>